[project]
name = "flow-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "rich>=14.2.0",
    "scapy>=2.6.1",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.38.0",
    "xgboost>=3.1.1",
]
